# LoL-Trading-Bot

./: .gitignore  README.md  pyproject.toml
data/: champion_profiles.json  champion_profiles_llm_draft.json  cleanse_v2_moderate.md  cleanse_v2_strict.md  lane_matchups.json  patch_stats.json  synergies.json
data/llm_seed/: Annie.json  Ashe.json  Bard.json  Caitlyn.json  Cassiopeia.json  Ezreal.json  Gnar.json  Jarvan IV.json  Jayce.json  K'Sante.json  Karma.json  Lucian.json  Milio.json  Naafiri.json  Pantheon.json  Rumble.json  Ryze.json  Seraphine.json  Sion.json  Xin Zhao.json
data/processed/: profile_validation.json  synergies_expanded.json  triples_expanded.json
docs/: operations.md
docs/research/: llm_curation_validation.md
docs/superpowers/plans/: 2026-05-20-lol-trading-bot-v1-plan.md  2026-05-24-lol-trading-bot-v2-plan.md  (+2 more)
research/: explore_kalshi.py  explore_kalshi_2.py  kalshi_client.py  live_lol_demo.py
scripts/: seed_llm_curation_top20.py
src/loltrader/: __init__.py  config.py
src/loltrader/api/: broker.py  (+1 more)
tests/: test_backtest.py  test_comp_aggregator.py  test_comp_pro_stats.py  test_comp_profiles.py  test_corpus.py  test_cv_classifier.py  test_cv_frame_source.py  test_cv_storage.py  test_db.py  test_draft_features.py  test_draft_read.py  test_exits.py  test_features.py  test_journal.py  test_leagues.py  test_linkage.py  test_livestats_discovery.py  test_livestats_storage.py  test_llm_curator.py  test_matchup.py  test_matchup_data.py  test_model.py  test_smoke.py  test_state_integrator.py  test_trader.py  test_twitch_auth.py  test_ws.py
(+130 files in other folders)
