[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loltrader"
version = "0.1.0"
description = "LoL Trading Bot for Kalshi (v1: paper-trading, pre-game + draft model)"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "cryptography>=42",
    "websockets>=12",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "streamlit>=1.32",
    "python-dateutil>=2.9",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
